# trusty-cage

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  trusty-cage-spec.md  v2-spec.md
docs/: v1-spec.md
docs/superpowers/specs/: 2026-03-26-custom-dockerfile-design.md  2026-03-30-additional-dirs-design.md
src/trusty_cage/: __init__.py  auth.py  cli.py  config.py  constants.py  diagnostics.py  docker.py  dotfiles.py  environment.py  ignore.py  image.py  messaging.py  network.py  stats.py  version_check.py
src/trusty_cage/assets/: Dockerfile  cage-send  cage-wait  env.template  init-network.sh  messaging-instructions.md
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_diagnostics.py  test_docker.py  test_environment.py  test_ignore.py  test_image.py  test_init.py  test_messaging.py  test_network.py  test_stats.py  test_version_check.py
