[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trusty-cage"
version = "0.1.0"
description = "Isolated Docker-based development environments for AI coding agents"
readme = {text = "Isolated Docker-based development environments for AI coding agents", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
trusty-cage = "trusty_cage.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trusty_cage"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
