[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trusty-cage"
version = "0.13.1"
description = "Isolated Docker-based development environments for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["docker", "development", "isolation", "ai", "agents", "claude", "containers"]
authors = [
    { name = "Adam Reese" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/areese801/trusty-cage"
Repository = "https://github.com/areese801/trusty-cage"
Issues = "https://github.com/areese801/trusty-cage/issues"

[project.scripts]
trusty-cage = "trusty_cage.cli:app"
tc = "trusty_cage.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trusty_cage"]

[tool.hatch.build.targets.sdist]
# Exclude session-local / working files that aren't meant to ship to PyPI.
# Without this, the sdist picked up .claude/settings.local.json (with
# user-specific absolute paths) during 0.13.0.
exclude = [
    ".claude/",
    ".agent/",
    ".coverage",
    ".coverage.*",
    "TODO.md",
    "set_creds.sh",
    "docs/cage-iterate-*.md",
    "docs/linkedin-post-*.md",
    ".images/",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that build a real Docker image (skipped unless RUN_DOCKER_TESTS=1)",
]
